--- a/chamber/join.html
+++ b/chamber/join.html
@@ -83,87 +83,108 @@
                 <label class="top">Business Name<input type="text" name="text" placeholder="Business Name"></label>
             </fieldset>
             <fieldset>
+                <legend>Description</legend>
+                <div id="nonmember">
+                    <h1>Nonmember</h1>
+                    <h2 class="sbsp">Fee</h2>
+                    <p class="sbsp">Muggle: $0</p>
+                    <p class="sbsp">Wizard: 0 Galleons, 0 Sickles, 0 Knuts</p>
+                    <h2 class="sbsp">Benefits</h2>
+                    <ul class="sbsp">
+                        <li>Invited to all events</li>
+                        <li>20% off all Hogsmeade purchases</li>
+                        <li>Invitation to participate in Chamber committees or task forces</li>
+                        <li>Anniversary/Grand Opening/Ribbon Cutting (one request)</li>
+                        <li>Enhanced website listing in Chamber Business Directory (organization and contact name, additional category, logo, two keywords, website and map)</li>
+                        <li>Member spotlight (featured on social media platforms)
+                        </li>
+                        <li>3 ads in The Daily Prophet</li>
+                        <li>2 adds in The Quibbler</li>
+                        <li>Subscription to The Daily Prophet</li>
+                        <li>Subscription to The Quibbler</li>
+                        <li>Subscription to Witch Weekly</li>
+                        <li>50% off all owl travel for first year.</li>
+                    </ul>
+                </div>
+
+                <div id="bronze">
+                    <h1>Bronze</h1>
+                    <h2 class="sbsp">Fee</h2>
+                    <p class="sbsp">Muggle: $4,000</p>
+                    <p class="sbsp">Wizard: 608 Galleons, 7 Sickles, 2 Knuts</p>
+                    <h2 class="sbsp">Benefits</h2>
+                    <ul class="sbsp">
+                        <li>Invited to 4 events</li>
+                        <li>10% off all Hogsmeade purchases</li>
+                        <li>Invitation to participate in Chamber committees or task forces</li>
+                        <li>Anniversary/Grand Opening/Ribbon Cutting (one request)</li>
+                        <li>Enhanced website listing in Chamber Business Directory (organization and contact name, additional category, logo, two keywords, website and map)</li>
+                        <li>Member spotlight (featured on social media platforms)
+                        </li>
+                        <li>1 ads in The Daily Prophet</li>
+                        <li>1 adds in The Quibbler</li>
+                        <li>20% off Subsciption to The Daily Prophet</li>
+                        <li>50% off Subscription to The Quibbler</li>
+                        <li>Subscription to Witch Weekly</li>
+                        <li>20% off all owl travel for first year.</li>
+                    </ul>
+                </div>
+                <div id="silver">
+                    <h1>Silver</h1>
+                    <h2 class="sbsp">Fee</h2>
+                    <p class="sbsp">Muggle: $8,000</p>
+                    <p class="sbsp">Wizard: 1,216 Galleons, 14 Sickles, 3 Knuts</p>
+                    <h2 class="sbsp">Benefits</h2>
+                    <ul class="sbsp">
+                        <li>Invited to 4 events</li>
+                        <li>15% off all Hogsmeade purchases</li>
+                        <li>Invitation to participate in 2 Chamber committees or task forces</li>
+                        <li>Anniversary/Grand Opening/Ribbon Cutting (one request)</li>
+                        <li>Enhanced website listing in Chamber Business Directory (organization and contact name, additional category, logo, two keywords, website and map)</li>
+                        <li>Member spotlight (featured on social media platforms)
+                        </li>
+                        <li>2 ads in The Daily Prophet</li>
+                        <li>1 adds in The Quibbler</li>
+                        <li>50% off Subsciption to The Daily Prophet</li>
+                        <li>Subscription to The Quibbler</li>
+                        <li>Subsciption to Witch Weekly</li>
+                        <li>25% off all owl travel for first year.</li>
+                    </ul>
+                </div>
+                <div id="gold">
+                    <h1>Gold</h1>
+                    <h2 class="sbsp">Fee</h2>
+                    <p class="sbsp">Muggle: $10,000</p>
+                    <p class="sbsp">Wizard: 1,521 Galleons, 0 Sickles, 18 Knuts</p>
+                    <h2 class="sbsp">Benefits</h2>
+                    <ul class="sbsp">
+                        <li>Invited to all events</li>
+                        <li>20% off all Hogsmeade purchases</li>
+                        <li>Invitation to participate in Chamber committees or task forces</li>
+                        <li>Anniversary/Grand Opening/Ribbon Cutting (one request)</li>
+                        <li>Enhanced website listing in Chamber Business Directory (organization and contact name, additional category, logo, two keywords, website and map)</li>
+                        <li>Member spotlight (featured on social media platforms)
+                        </li>
+                        <li>3 ads in The Daily Prophet</li>
+                        <li>2 adds in The Quibbler</li>
+                        <li>Subscription to The Daily Prophet</li>
+                        <li>Subscription to The Quibbler</li>
+                        <li>Subscription to Witch Weekly</li>
+                        <li>50% off all owl travel for first year.</li>
+                    </ul>
+
+                </div>
+            </fieldset>
+            <fieldset>
                 <legend>Choose A Membership</legend>
-                <label class="sbs" id="nonmember"><input type="radio" name="audience" value="NP Membership"> NP Membership</label>
-                <h2 class="sbsp">Fee</h2>
-                <p class="sbsp">Muggle: $0</p>
-                <p class="sbsp">Wizard: 0 Galleons, 0 Sickles, 0 Knuts</p>
-                <h2 class="sbsp">Benefits</h2>
-                <ul class="sbsp">
-                    <li>Invited to all events</li>
-                    <li>20% off all Hogsmeade purchases</li>
-                    <li>Invitation to participate in Chamber committees or task forces</li>
-                    <li>Anniversary/Grand Opening/Ribbon Cutting (one request)</li>
-                    <li>Enhanced website listing in Chamber Business Directory (organization and contact name, additional category, logo, two keywords, website and map)</li>
-                    <li>Member spotlight (featured on social media platforms)
-                    </li>
-                    <li>3 ads in The Daily Prophet</li>
-                    <li>2 adds in The Quibbler</li>
-                    <li>Subscription to The Daily Prophet</li>
-                    <li>Subscription to The Quibbler</li>
-                    <li>Subscription to Witch Weekly</li>
-                    <li>50% off all owl travel for first year.</li>
-                </ul>
+                <label class="sbs" id="nonmember"><input type="radio" name="audience" value="NP Membership"> Nonprofit</label>
+
                 <label class="sbs" id="bronze"><input type="radio" name="audience" value="Bronze"> Bronze</label>
-                <h2 class="sbsp">Fee</h2>
-                <p class="sbsp">Muggle: $4,000</p>
-                <p class="sbsp">Wizard: 608 Galleons, 7 Sickles, 2 Knuts</p>
-                <h2 class="sbsp">Benefits</h2>
-                <ul class="sbsp">
-                    <li>Invited to 4 events</li>
-                    <li>10% off all Hogsmeade purchases</li>
-                    <li>Invitation to participate in Chamber committees or task forces</li>
-                    <li>Anniversary/Grand Opening/Ribbon Cutting (one request)</li>
-                    <li>Enhanced website listing in Chamber Business Directory (organization and contact name, additional category, logo, two keywords, website and map)</li>
-                    <li>Member spotlight (featured on social media platforms)
-                    </li>
-                    <li>1 ads in The Daily Prophet</li>
-                    <li>1 adds in The Quibbler</li>
-                    <li>20% off Subsciption to The Daily Prophet</li>
-                    <li>50% off Subscription to The Quibbler</li>
-                    <li>Subscription to Witch Weekly</li>
-                    <li>20% off all owl travel for first year.</li>
-                </ul>
+
                 <label class="sbs" id="silver"><input type="radio" name="audience" value="Silver"> Silver</label>
-                <h2 class="sbsp">Fee</h2>
-                <p class="sbsp">Muggle: $8,000</p>
-                <p class="sbsp">Wizard: 1,216 Galleons, 14 Sickles, 3 Knuts</p>
-                <h2 class="sbsp">Benefits</h2>
-                <ul class="sbsp">
-                    <li>Invited to 4 events</li>
-                    <li>15% off all Hogsmeade purchases</li>
-                    <li>Invitation to participate in 2 Chamber committees or task forces</li>
-                    <li>Anniversary/Grand Opening/Ribbon Cutting (one request)</li>
-                    <li>Enhanced website listing in Chamber Business Directory (organization and contact name, additional category, logo, two keywords, website and map)</li>
-                    <li>Member spotlight (featured on social media platforms)
-                    </li>
-                    <li>2 ads in The Daily Prophet</li>
-                    <li>1 adds in The Quibbler</li>
-                    <li>50% off Subsciption to The Daily Prophet</li>
-                    <li>Subscription to The Quibbler</li>
-                    <li>Subsciption to Witch Weekly</li>
-                    <li>25% off all owl travel for first year.</li>
-                </ul>
+
                 <label class="sbs" id="gold"><input type="radio" name="audience" value="Gold"> Gold</label>
-                <h2 class="sbsp">Fee</h2>
-                <p class="sbsp">Muggle: $10,000</p>
-                <p class="sbsp">Wizard: 1,521 Galleons, 0 Sickles, 18 Knuts</p>
-                <h2 class="sbsp">Benefits</h2>
-                <ul class="sbsp">
-                    <li>Invited to all events</li>
-                    <li>20% off all Hogsmeade purchases</li>
-                    <li>Invitation to participate in Chamber committees or task forces</li>
-                    <li>Anniversary/Grand Opening/Ribbon Cutting (one request)</li>
-                    <li>Enhanced website listing in Chamber Business Directory (organization and contact name, additional category, logo, two keywords, website and map)</li>
-                    <li>Member spotlight (featured on social media platforms)
-                    </li>
-                    <li>3 ads in The Daily Prophet</li>
-                    <li>2 adds in The Quibbler</li>
-                    <li>Subscription to The Daily Prophet</li>
-                    <li>Subscription to The Quibbler</li>
-                    <li>Subscription to Witch Weekly</li>
-                    <li>50% off all owl travel for first year.</li>
-                </ul>
+
                 <input type="hidden" id="date" name="date" value="CurrentTime">
                 <input type="hidden" id="time" name="time" value="CurrentDate">
             </fieldset>
@@ -173,6 +194,8 @@
             </fieldset>
             <input type="submit" value="Get Membership" class="submitBtn">
         </form>
+
+
     </main>
 
     <script src="js/script.js"></script>
