--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -34,13 +34,13 @@
     <nav class="nav">
         <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
         <ul id="primaryNav">
-            <li>
-                <a class="active" href="index.html">Home</a>
-            </li>
+
             <li>
                 <a class="active" href="discover.html">Discover</a>
             </li>
-
+            <li>
+                <a class="active" href="directory.html">Directory</a>
+            </li>
             <li>
                 <a class="active" href="join.html">Join</a>
             </li>
