--- a/chamber/confirm.html
+++ b/chamber/confirm.html
@@ -39,7 +39,7 @@
                     <a class="active" href="index.html">Home</a>
                 </li>
                 <li>
-                    <a class="active" href="discovery.html">Discover</a>
+                    <a class="active" href="discover.html">Discover</a>
                 </li>
                 <li>
                     <a class="active" href="directory.html">Directory</a>
@@ -48,7 +48,7 @@
                     <a class="active" href="join.html">Join</a>
                 </li>
                 <li>
-                    <a class="active" href="contact">Contact</a>
+                    <a class="active" href="contact.html">Contact</a>
                 </li>
 
             </ul>
@@ -64,9 +64,11 @@
             </ul>
 
         </nav>
-        <p id="p-date"><span id="currentdate"></span></p>
+        <div class="divdate">
+            <p><span id="message"></span></p>
+            <p id="p-date" class="date"></p>
+        </div>
     </header>
-
 
 
     <!-- CONTENT HERE -->
