--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -39,9 +39,7 @@
                 <li>
                     <a class="active" href="index.html">Home</a>
                 </li>
-
                 <li>
-
                     <a class="active" href="discover.html">Discover</a>
                 </li>
                 <li>
@@ -50,7 +48,9 @@
                 <li>
                     <a class="active" href="join.html">Join</a>
                 </li>
-
+                <li>
+                    <a class="active" href="contact.html">Contact</a>
+                </li>
 
             </ul>
             <ul class="icons">
@@ -73,11 +73,11 @@
     <main id="contact-grid">
         <div>
             <h1>Contact Info</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, natus?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis, animi!</p>
+            <p>For wizards it is best to send your owl to the headmaster of hogwarts. For muggles or muggleborns who are unable to use owls, you can contact us through phone and email. <br> We also have a a muggle base address taht we can be contacted at.</p>
             <ul>
                 <li>
                     <h2>Salt Lake City</h2>
-                    <p><strong>Address:</strong><br>Salt Lake Chamber, 201 S Main St #2300, Salt Lake City,UT 84111</p>
+                    <p><strong>Address:</strong><br>Salt Lake Chamber, 201 S Main St #2300, Salt Lake City,UT 84111 <br><strong>Hours:</strong> 24/7. Ring the bell and yell out Ernie!</p>
                     <p><strong>Phone:</strong><br>+1(801)231-3935
                     </p>
                     <p><strong>Email:</strong><br>nikkoletashby@gmail.com
