--- a/chamber/join.html
+++ b/chamber/join.html
@@ -43,7 +43,7 @@
                 <a class="active" href="directory.html">Directory</a>
             </li>
             <li>
-                <a class="active" href="#">Join</a>
+                <a class="active" href="join.html">Join</a>
             </li>
             <li>
                 <a class="active" href="contact.html">Contact</a>
@@ -62,7 +62,10 @@
         </ul>
 
     </nav>
-    <p id="p-date"><span id="currentdate"></span></p>
+    <div class="divdate">
+        <p><span id="message"></span></p>
+        <p id="p-date" class="date"></p>
+    </div>
 </header>
 
 <body>
