--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,7 +36,9 @@
         <nav class="nav">
             <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
             <ul id="primaryNav">
-
+                <li>
+                    <a class="active" href="index.html">Home</a>
+                </li>
                 <li>
                     <a class="active" href="discover.html">Discover</a>
                 </li>
