--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -24,47 +24,36 @@
 
 <body>
     <header>
-        <img class="logo-img" id="header-img" src="images/2730327_colour_harry_hogwarts_house_potter_icon.png" alt="logo">
-        <ul class="company">
-            <li>
-                <h1>Harry Potter</h1>
-                <p>and the Chamber of Commerce</p>
-            </li>
-        </ul>
+        <div id="logo">
+            <img class="logo-img" id="header-img" src="images/temple_icon.jpg" alt="logo">
+            <h1>Temple Inn & <br>Suites</h1>
+        </div>
 
-
-        <nav class="nav">
-            <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
-            <ul id="primaryNav">
-                <li>
-                    <a class="active" href="index.html">Home</a>
-                </li>
-                <li>
-                    <a class="active" href="discover.html">Discover</a>
-                </li>
-                <li>
-                    <a class="active" href="directory.html">Directory</a>
-                </li>
-                <li>
-                    <a class="active" href="join.html">Join</a>
-                </li>
-                <li>
-                    <a class="active" href="contact.html">Contact</a>
-                </li>
-
-            </ul>
-            <ul class="icons">
-                <li>
-                    <a href="https://www.facebook.com/" target="_blank">
-                        <img id="facebook" src="images/facebook-icon.png" alt="facebook Icon"></a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/in/nikkolet-ashby-418757161/" target="_blank">
-                        <img id="linkedin" src="images/3225190_app_linkedin_logo_media_popular_icon.png" alt="LinkedIn Icon"></a>
-                </li>
-            </ul>
-
-        </nav>
+        <div>
+            <nav class="nav">
+                <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
+                <ul id="primaryNav">
+                    <li>
+                        <a class="active" href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a class="active" href="#">Temple</a>
+                    </li>
+                    <li>
+                        <a class="active" href="#">Reservation</a>
+                    </li>
+                    <li>
+                        <a class="active" href="#">Services</a>
+                    </li>
+                    <li>
+                        <a class="active" href="#">Reception</a>
+                    </li>
+                    <li>
+                        <a class="active" href="#">Full-Time Temple Missionary</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
         <div class="divdate">
             <p><span id="message"></span></p>
             <p id="p-date" class="date"></p>
