--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -17,7 +17,7 @@
     <link href="css/large.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Sansita&family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="icon" href="images/2730327_colour_harry_hogwarts_house_potter_icon.png">
 </head>
 
@@ -26,7 +26,7 @@
     <header>
         <div id="logo">
             <img class="logo-img" id="header-img" src="images/temple_icon.jpg" alt="logo">
-            <h1>Temple Inn & <br>Suites</h1>
+            <h1>Temple Inn<br> & <br>Suites</h1>
         </div>
 
         <div>
@@ -54,22 +54,22 @@
                 </ul>
             </nav>
         </div>
-        <div class="divdate">
-            <p><span id="message"></span></p>
-            <p id="p-date" class="date"></p>
-        </div>
     </header>
+
     <main>
+        <div>
+            <h1>Weather Alert!</h1>
+        </div>
         <div class="grid">
-            <div id="event-large" class="event large-div">
-                <h2>Triwizard Tournament</h2>
-                <img class="div-image" src="images/2730338_colour_dragon_egg_harry_magic_icon.png" alt="Dragon Egg">
-                <p>The first task in the Triwizard Tournament is complete!<br> Now our contestants will have to figure out what the next task is. <br><a href="https://harrypotter.fandom.com/wiki/Golden_egg">more info...</a></p>
-
-
-
+            <div>
+                <h1>Nearby Temples Carousel with arrows</h1>
             </div>
-
+            <div>
+                <h1>Make a Reservation with button</h1>
+            </div>
+            <div>
+                <h1>Activities Carousel with arrows</h1>
+            </div>
             <div id="weather-large" class="weather large-div">
                 <div>
                     <p>The current temperature in West Valley City, Utah is <span id="current-temp"></span> &deg;F</p>
