--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -65,9 +65,9 @@
             <div>
                 <h1>Nearby Temples Carousel with arrows</h1>
             </div>
-            <div>
+            <div id="reservation">
                 <h1>Make a Reservation with button</h1>
-                <img src="" alt="Reservation Image"><br>
+                <img src="images/temple-hotel.jpg" alt="Reservation Image"><br>
                 <a href="#"><button class="button">Make a Reservation!</button></a>
             </div>
             <div>
@@ -95,8 +95,45 @@
             <img class="logo-img" id="header-img" src="images/temple_icon.jpg" alt="logo">
             <h1>Temple Inn<br> & <br>Suites</h1>
         </div>
-        <p class="js" id="js-p">
-            &copy;2022 | Temple Inn & Suites | CEO: Nikkolet Ashby | WDD 230 Final Project | Last Updated: <span id="lastmodified"></span></p>
+        <div>
+            <h1>Contact Us</h1>
+            <ul>
+                <li><img src="images/phone.png" alt="phone">
+                    <p>Phone: </p>
+                </li>
+                <img src="images/email.png" alt="email">
+                <p>Phone: </p>
+                <img src="images/address.png" alt="address">
+                <p>Phone: </p>
+                <img src="images/fax.png" alt="fax">
+                <p>Phone: </p>
+            </ul>
+        </div>
+        <div>
+            <h1> Google Map</h1>
+            <img src="#" alt="google map image">
+        </div>
+        <div>
+            <h1>Find Us on Social Media</h1>
+            <ul>
+                <li>
+                    <a href="#"><img src="#" alt="facebook Icon"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="#" alt="twitter Icon"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="#" alt="linkedIn Icon"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="#" alt="instagram Icon"></a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <p class="js" id="js-p">
+                &copy;2022 | Temple Inn & Suites | CEO: Nikkolet Ashby | WDD 230 Final Project | Last Updated: <span id="lastmodified"></span></p>
+        </div>
 
     </footer>
     <script src="js/script.js"></script>
